# simdjson_use_release

./: .gitignore  CMakeLists.txt  README.md  getCPM.cmake
